--- a/src/sources/views/sign-in.hbs
+++ b/src/sources/views/sign-in.hbs
@@ -11,12 +11,12 @@
             <div class="form-group">
               <label for="username">Tài khoản</label>
               <input type="text" class="form-control form-control-lg rounded-0" name="username" id="username"
-                value="{{username}}" required>
+                value="admin123" required>
             </div>
             <div class="form-group">
               <label>Mật khẩu</label>
               <input type="password" class="form-control form-control-lg rounded-0" name="password" id="password"
-                value="{{password}}" required>
+                value="Admin123" required>
             </div>
             <div class="custom-control custom-checkbox m-2">
               <input type="checkbox" class="custom-control-input" id="remember">
